--- a/public/index.html
+++ b/public/index.html
@@ -97,6 +97,7 @@
           <img
             class="notification__image"
             src="assets/images/image-chess.webp"
+            alt="image chess picture"
           />
         </div>
         <div class="notification">
